make invalide feedback text readable on all background colors, fix #219

--- a/web/themes/quartiers_solidaires/assets/components/molecules/form-control/form-control.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/form-control/form-control.scss
@@ -48,3 +48,7 @@
     z-index: -1;
   }
 }
+
+.bg-primary {
+  @include form-validation-state("invalid", theme-color-level('danger', -4));
+}
